corrigindo tela de cadastro

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,6 +11,7 @@
   <script src="./js/sessao.js"></script>
 
   <link rel="stylesheet" href="./css/estilo.css" />
+  <link rel="stylesheet" href="./css/cadastro.css" />
   <link rel="icon" href="./assets/icon/logo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
@@ -49,7 +50,7 @@
     </div>
     <div class="container">
       <div class="card card-cadastro">
-        <h2>Bem-vindo!</h2>
+        <h2>Cadastre-se</h2>
         <div class="formulario">
           <!--
                          Para inserir mais um campo, copie uma das inputs abaixo.
