--- a/public/login.html
+++ b/public/login.html
@@ -51,7 +51,7 @@
         </div>
         <div class="container">
             <div class="card card-login">
-                <h2>Olá de volta!</h2>
+                <h2>Entrar</h2>
                 <div class="formulario">
                     <div class="campo">
                         <span>E-mail:</span>
