Home page completed

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -26,7 +26,7 @@
           <a href="index.html">HOME</a>
         </li>
         <li>
-          <a href="simulador.html">SOBRE</a>
+          <a href="index.html#sobre">SOBRE</a>
         </li>
       </ul>
 
@@ -58,19 +58,19 @@
                      -->
           <div class="campo">
             <span>Nome:</span>
-            <input id="nome_input" type="text" placeholder="Seu nome" />
+            <input id="nome_input" type="text" placeholder="Nome" />
           </div>
           <div class="campo">
             <span>E-mail:</span>
-            <input id="email_input" type="text" placeholder="meuemail@provedor.com" />
+            <input id="email_input" type="email" placeholder="meuemail@gmail.com" />
           </div>
           <div class="campo">
             <span>Senha:</span>
-            <input id="senha_input" type="password" placeholder="******" />
+            <input id="senha_input" type="password" placeholder="***" />
           </div>
           <div class="campo">
             <span>Confirmação da Senha:</span>
-            <input id="confirmacao_senha_input" type="password" placeholder="******" />
+            <input id="confirmacao_senha_input" type="password" placeholder="***" />
           </div>
           <button class="botao" onclick="cadastrar()">Cadastrar</button>
         </div>
@@ -86,8 +86,7 @@
   <!--footer inicio-->
   <div class="footer">
     <div class="container">
-      <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-      <span class="version">v1.0.0</span>
+      <h4>© Singularity — 2025</h4>
     </div>
   </div>
   <!--footer fim-->
