--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <a href="#">HOME</a>
         </li>
         <li>
-          <a href="simulador.html">SOBRE</a>
+          <a href="#sobre">SOBRE</a>
         </li>
       </ul>
 
@@ -45,40 +45,37 @@
     </div>
   </div>
 
-  <div class="social">
+  <div class="sobre" id="sobre">
+    <div class="title">
+      <span>Por que interestelar?</span>
+    </div>
     <div class="container">
-      <div class="boxes">
-        <div class="box">
-          <img src="assets/imgs/planet-earth_color.png">
-          <h4>Missão</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-            vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-            minima.</p>
-        </div>
-        <div class="box">
-          <img src="assets/imgs/lightbulb_color.png">
-          <h4>Visão</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-            vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-            minima.</p>
-        </div>
-        <div class="box">
-          <img src="assets/imgs/growth_color.png">
-          <h4>Valores</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-            vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-            minima.</p>
-        </div>
+      <div class="img-lateral">
+        <img src="assets/imgs/murphy-e-cooper.jpg">
+      </div>
+      <div class="text">
+        <span>Não é só pela astronomia, mas também pela <b>conexão humana</b> que o filme transmite.</span>
+        <br>
+        <span>O Projeto Singularity nasce para te convidar a conhecer um pouco sobre o nosso universo.</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="convite">
+    <div class="container">
+      <div class="text">
+        <p>Faça sua conta e aprenda um pouco <br> sobre Astronomia</p>
+      </div>
+      <div class="btn-convite">
+        <a href="cadastro.html" class="btnC">CADASTRE-SE</a>
       </div>
     </div>
   </div>
 
   <div class="footer">
     <div class="container">
-      <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-      <span class="version">v1.0.0</span>
+      <h4> © Singularity — 2025</h4>
     </div>
   </div>
 </body>
-
 </html>
