--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
                     <a href="index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="simulador.html">SOBRE</a>
+                    <a href="index.html#sobre">SOBRE</a>
                 </li>
             </ul>
 
@@ -76,8 +76,7 @@
     <!--footer inicio-->
     <div class="footer">
         <div class="container">
-            <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-            <span class="version">v1.0.0</span>
+            <h4>© Singularity — 2025</h4>
         </div>
     </div>
     <!--footer fim-->
