Dashboard inicial finalizada

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -28,7 +28,7 @@
 
 <!-- <body onload=" atualizarFeed()"> -->
 
-<body>
+<body onload="validarSessao()">
 
     <div class="janela">
         <div class="header-left">
@@ -39,8 +39,8 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./cards.html">
-                    <h3>Aquários</h3>
+                <a href="./home.html">
+                    <h3>Home</h3>
                 </a>
             </div>
 
