Organizando ambiente para Quiz e Dashboard

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -44,16 +44,14 @@
                 </a>
             </div>
 
-            <div class="btn-nav">
-
-                <h3>Gráficos</h3>
-
+            <div class="btn-nav-white">
+                <a href="mural.html">
+                    <h3>Quiz</h3>
+                </a>
             </div>
 
-            <div class="btn-nav-white">
-                <a href="./mural.html">
-                    <h3>Mural de Avisos</h3>
-                </a>
+            <div class="btn-nav">
+                <h3>Dashboard</h3>
             </div>
 
             <div class="btn-logout" onclick="limparSessao()">
