--- a/public/dashboard/home.html
+++ b/public/dashboard/home.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./dashboard.html">
+                <a href="./mural.html">
                     <h3>Quiz</h3>
                 </a>
             </div>
