--- a/public/login.html
+++ b/public/login.html
@@ -86,8 +86,6 @@
 </html>
 
 <script>
-
-
     function entrar() {
         aguardar();
 
@@ -127,8 +125,7 @@
                     console.log(JSON.stringify(json));
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
+                    sessionStorage.ID_USUARIO = json.id_usuario;
 
                     setTimeout(function () {
                         window.location = "./dashboard/home.html";
@@ -156,5 +153,4 @@
     function sumirMensagem() {
         cardErro.style.display = "none"
     }
-
 </script>
