Estilizando pagina de quiz

--- a/public/dashboard/home.html
+++ b/public/dashboard/home.html
@@ -61,7 +61,7 @@
                         <p><span>O cinema</span> despertou nossa curiosidade. <br>Agora <span>é sua vez</span> de explorar o universo de verdade.</p>
                     </div>
                     <div class="btn-quiz">
-                        <a href="#">Responder Quiz</a>
+                        <a href="quiz.html">Responder Quiz</a>
                     </div>
                 </div>                
             </div>
