--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -118,6 +118,12 @@
 
                 </div>
             </div>
+
+            <div id="playerContainer" style="margin: 20px 0; text-align:center;">
+                <iframe src="https://open.spotify.com/embed/album/3B61kSKTxlY36cYgzvf3cP" width="300" height="380"
+                frameborder="0" allowtransparency="true" allow="encrypted-media">
+                </iframe>
+            </div>
         </div>
     </div>
 </body>
