--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="shortcut icon" href="../assets/icon/favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icon/logo.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -429,6 +429,7 @@
                     console.log("Erro ao salvar o resultado.")
                 }
             })
-            .catch((erro) => console.error("Erro no fetch:", erro))
+            .catch((erro) => console.error("Erro:", erro));
+            return false;
     }
 </script>
